app/styles/components/torpid-list.scss
$imageSize: 40px;

.torpid-list {
	width: 100%;
	height: 100%;
	overflow: hidden;
	overflow-y: auto;

	& > ul {
		width: 100%;
		margin: 0 auto;
		padding: 0;
		@include box-sizing();
		
		& > .torpid-list-row {
			height: 56px;
			width: 100%;
			padding: 0;
			cursor: pointer;
			@include box-sizing();

			& > .torpid-list-select {
				display: none;
				width: $imageSize;
				height: $imageSize;
				padding: 9px;
				@include box-sizing();
			}
			& > .torpid-list-thumbnail {
				float: left;
				width: $imageSize;
				height: $imageSize;
				margin: 8px 10px 0 0;
				border-radius: $imageSize;
				border: 1px solid $torpid-color-5;
				overflow: hidden;
				@include box-sizing();

				& > img {
					width: 100%;
					height: 100%;
				}
			}
			& > .torpid-list-content {
				display: inline-block;
				width: 100%;
				height: 100%;
				padding: 10px 0;
				border-bottom: 1px solid $torpid-color-5;
				@include box-sizing();

				span {
					float: left;
					height: 100%;
					font: 16px/36px $ft-norm;
					color: $torpid-color-3;
					padding: 0 10px;
					text-align: center;
					@include box-sizing();

					&:first-of-type {
						padding: 0 10px 0 0;
						color: $torpid-color-2;
						text-align: left;
					}
					&:last-of-type {
						text-align: right;
					}
				}
			}
		}
	}

	&.clickable {

		& > ul {

			& > .torpid-list-row {

				& > .torpid-list-content {
					
					span {

						&:first-of-type {
							color: $torpid-color-1;
						}
					}
				}
			}
		}
	}

	&.image {
		
		& > ul {

			& > .torpid-list-row {
				padding: 0 0 0 $imageSize+24;

				& > .torpid-list-thumbnail {
					margin: 8px 0 0 0-24-$imageSize;
				}
			}
		}
	}

	&.selector {

		& > ul {
			
			& > .torpid-list-row {
				position: relative;
				@include transition(padding .3s ease-in-out);
				
				& > .torpid-list-select {
					display: block;
					position: absolute;
					left: 0;
					top: 8px;
					z-index: 1;

					& > div {
						margin: 0;
						height: 22px;
						width: 22px;
						padding: 0;

						& > div.box {
							margin: 0;
						}
					}
				}
				& > .torpid-list-thumbnail {
					position: relative;
					z-index: 2;
				}
			}
		}

		&.edit {
			
			& > ul {
				& > .torpid-list-row {
					padding: 0 0 0 8+$imageSize;
				}
			}

			&.image {
				
				& > ul {
					& > .torpid-list-row {
						padding: 0 0 0 32+$imageSize+$imageSize;
					}
				}
			}
		}
	}
}

